# BitTwidHash

./: Cargo.toml  README.md
benches/: benches.rs
src/: lib.rs
tests/: basic.rs  collisions.rs
